--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body {
   display: block;
 }
 
-/* Welcome Message - Torn Lined Paper Style */
+/* Welcome Message - Torn Paper */
 .welcome-message {
   width: 90%;
   max-width: 550px;
