--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 body {
   font-family: 'Playfair Display', serif;
-  background: url('https://images.unsplash.com/photo-1525615830251-36561ffc9f04?w=800&auto=format&fit=crop&q=60') no-repeat center center fixed;
+  background: url('https://images.unsplash.com/photo-1577892210326-4b00a7a9cb47?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center fixed;
   background-size: cover;
   color: #fdfaf5;
   line-height: 1.6;
