--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
   z-index: 1000;
   width: 100%;
   display: flex;
+  transition: all 0.4s ease-in-out;
   justify-content: space-between;
   align-items: center;
   background: rgba(0, 0, 0, 0.4);
@@ -37,6 +38,7 @@ body {
 .site-title {
   font-family: 'Rustic Roadway', cursive;
   font-size: 2.2rem;
+  transition: all ease-in-out;
   color: #fffbe8;
   text-shadow: 0 0 8px rgba(255, 255, 255, 0.5), 0 0 15px rgba(212, 175, 55, 0.5);
 }
