--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ body {
   100% { transform: rotateY(360deg); }
 }
 
-/* Flickering Text */
+/* Flickering Text **/
 .loader-text {
   margin-top: 1rem;
   font-family: 'Caveat', cursive;
