--- a/style.css
+++ b/style.css
@@ -310,13 +310,14 @@ body {
 
 
 /* Loader Background + Book Flip */
-#loader {
+
+#loader-wrapper {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background: #f3e5d0; /* Cream-brown */
+  width: 100vw;
+  height: 100vh;
+  background: #f3e5d0; /* cream brown */
   display: flex;
   flex-direction: column;
   align-items: center;
