--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 body {
   font-family: 'Playfair Display', serif;
-  background: url('https://images.unsplash.com/photo-1577892210326-4b00a7a9cb47?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center fixed;
+  background: url('https://images.pexels.com/photos/2823459/pexels-photo-2823459.jpeg?_gl=1*1784h3j*_ga*MjEwODIyMTA5NS4xNzUwNjk0MTQ5*_ga_8JE65Q40S6*czE3NTA2OTQxNDgkbzEkZzEkdDE3NTA2OTQyNzckajYwJGwwJGgw') no-repeat center center fixed;
   background-size: cover;
   color: #fdfaf5;
   line-height: 1.6;
